--- a/bookshelf/appsettings.json
+++ b/bookshelf/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "dependencies": {
+    "Microsoft.AspNet.Cors": "6.0.0-rc1-final"
+  }
 }
