--- a/bookshelf/Properties/launchSettings.json
+++ b/bookshelf/Properties/launchSettings.json
@@ -27,5 +27,9 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
+  },
+  "AllowedHosts": "*",
+  "dependencies": {
+    "Microsoft.AspNet.Cors": "6.0.0-rc1-final"
   }
 }
